Student Profile UI

--- a/src/css/student_home.css
+++ b/src/css/student_home.css
@@ -21,7 +21,7 @@ body {
     background-color: #111;
     opacity: 0.9;
     overflow-x: hidden;
-    padding-top: 60px;
+    padding-top: 9px;
     transition: 0.7s;
 }
 .nav a {
@@ -53,7 +53,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 14px 15px 0 15px;   
+    padding: 14px 15px 9px 15px;   
 }
 
 .nav-right {
@@ -70,8 +70,28 @@ body {
 
 .body {
     margin-left: 13px;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 15px;
+    margin-top: 10px;
 }
 
 .nav i {
     margin-right: 10px;
+}
+
+.ui.card:first-child {
+    margin-top: 0;
+    margin-left: 14px;
+    margin-bottom: 3px;
+}
+
+.ui.form {
+    position: relative;
+    width: 75%;
+    border-radius: 5px;
+}
+
+.ui.card {
+    width: 32%;
 }
